--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link rel="icon" href="/binary.svg">
+    <title>Bin2Dec</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript></noscript>
     <div id="root"></div>
   </body>
 </html>
